# ResearchLab

./: 404.html  CHANGELOG.md  GEMINI.md  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  tasks.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  release.yml
api/: index.html
design/: index.html
docs/: api.md  design.md  examples.md  index.md  jax.md  tracking.md
examples/: index.html
jax/: index.html
src/researchlab/: __init__.py  tracker.py  utils.py
src/researchlab/design/: __init__.py  core.py  infra.py  orchestrator.py  utils.py
src/researchlab/tracking/: cli.py  tracker.py  utils.py
tests/: conftest.py  test_cli.py  test_tracker.py
tests/design/: test_core.py  test_infra.py  test_utils.py
tests/tracking/: test_tracker.py
tracking/: index.html
